--- a/Style.css
+++ b/Style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-    background-image: url(imagenes/OnePiece-Store-Banner-1920x730px.jpg);
+    background-image: url(imagenes/Cover);
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
